--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "sweepingfunds",
+  "name": "CodingTest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "truffle test",
+    "compile": "truffle compile"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "@openzeppelin/contracts": "^4.1.0",
     "@openzeppelin/truffle-upgrades": "^1.6.1",
     "fs": "0.0.1-security",
+    "truffle": "^5.1.35",
     "truffle-plugin-verify": "^0.5.7"
   },
   "dependencies": {
